--- a/index.html
+++ b/index.html
@@ -6,14 +6,42 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <div class="title">
-      <h1>Discover hidden places in the world around you</h2>
+    <div>
+      <h1>Discover hidden places in the world around you</h1>
+      <div>
+        <nav>
+          <h4><a href="./download.html" target="_blank" id="link">Download Excursion
+            (Coming soon!)</a></h4>
+        </nav>
+      </div>
     </div>
-    <div class="link">
-      <nav>
-        <p><a href="./download.html" target="_blank">Download Excursion (Coming soon!)</a></p>
-      </nav>
+    <div>
+      <video width="auto" height="auto" autoplay loop>
+        <source src="./resources/video/excursion.mp4" type="video/mp4"/>
+        <source src="./resources/video/excursion.ogg" type="video/ogg"/>
+        Your browser does not support the video tag.
+      </video>
     </div>
-
+    <div>
+      <h2>Your personal travel guide</h2>
+        <p>Excursion remembers place you like, and recommends new points of
+          interest around you.</p>
+        <img src="./resources/images/camp.jpg"/>
+    </div>
+    <div>
+      <div class="image">
+        <img src="./resources/images/phone.png"/>
+      </div>
+      <h2>Coming Soon for iPhone and Android</h2>
+      <div>
+        <nav>
+          <h4><a href="./download.html" target="_blank" id="link">Download Excursion
+            (Coming Soon!)<a></h4>
+        </nav>
+      </div>
+    </div>
+    <div class="copyright">
+        <p>&copy; Excursion</p>
+    </div>
   </body>
 </html>
